tests/outref/TERR008.ref
[ INFO] PATH:LINENUM DATE TIME : INFO_RECORDING_ENV_VARS : # Recording pertinent ydb_* env var values at process startup
OCTO>      select
OCTO>   notathing         from
OCTO>                   names
OCTO>   ;
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: NOTATHING
Error with syntax near (line 2, column 2):

	   select
	notathing  	  from
	^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select
	notathing  	  from
			names
	;

[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [select
	notathing  	  from
			names
	;]
[ INFO] PATH:LINENUM DATE TIME : INFO_RETURNING_FAILURE : Returning failure from octo()
OCTO> 
